# bookstore

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: heroku-deploy.yml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
